force-app/main/default/objects/Inning__c/Inning__c.object-meta.xml
<CustomObject>
    <description>An MLB game inning.</description>
    <label>Inning</label>
    <nameField>
        <displayFormat>INN-{000000}</displayFormat>
        <label>Inning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Innings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>