force-app/main/default/objects/Inning__c/fields/Away_Team_Runs__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Runs__c</fullName>
    <label>Away Team Runs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>