force-app/main/default/objects/Inning__c/fields/Home_Team_Runs__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Runs__c</fullName>
    <label>Home Team Runs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>