force-app/main/default/objects/Inning__c/fields/Inning_Number__c.field-meta.xml
<CustomField>
    <fullName>Inning_Number__c</fullName>
    <label>Inning Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>