force-app/main/default/objects/Inning__c/fields/Inning_Sports_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Inning_Sports_Data_ID__c</fullName>
    <externalId>true</externalId>
    <label>Inning Sports Data ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>