force-app/main/default/objects/Inning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Game__c</columns>
    <columns>Inning_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>